# extratools-git

./: .pre-commit-config.yaml  .pre-commit-local-checks  README.md  pre-commit-local-checks  pyproject.toml
src/: extratools_git
src/extratools_gittools/: prompt.py  repo.py  status.py
tests/: test_gittools.py  test_importable.py
