[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = [
    "src",
]

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.poetry]
name = "extratools-gittools"
version = "0.1.0"
description = ""
authors = ["Chuancong Gao <chuanconggao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sh = "^2.0.6"
ansicolors = "^1.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml:cov.xml --cov-report html --cov-report term-missing"
pythonpath = [
    "src",
]
